Fix print style, fix toc link contrast

--- a/themes/hyde-hyde-hyde-zola/sass/hyde-hyde/_print.scss
+++ b/themes/hyde-hyde-hyde-zola/sass/hyde-hyde/_print.scss
@@ -31,6 +31,10 @@ ul {
   margin: 0;
 }
 
+.topbar {
+  display: none !important;
+}
+
 .toc-wrapper {
   display: none !important;
 }
