--- a/themes/hyde-hyde-hyde-zola/sass/hyde-hyde/_responsive.scss
+++ b/themes/hyde-hyde-hyde-zola/sass/hyde-hyde/_responsive.scss
@@ -52,3 +52,8 @@
     }
   }
 }
+
+//dark mode
+@media (prefers-color-scheme: dark) {
+
+}
