--- a/themes/hyde-hyde-hyde-zola/sass/hyde-hyde/_variables.scss
+++ b/themes/hyde-hyde-hyde-zola/sass/hyde-hyde/_variables.scss
@@ -88,6 +88,10 @@ $h3-font-size: 1.5rem;
 $h4-font-size:1.3rem;
 $h5-font-size:1rem;
 
+//toc
+$toc-background-color: #f3f3f3;
+$toc-link-color: #0e73ba;
+$toc-font-size: .9rem;
 
 // topbar
 $topbar-color: #0d3a58;
